logs/tha.taglist.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tha'...
Listing './lib/python3.5/site-packages/tha/tagfinder'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/customer'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/customer/site'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/customer/site/tags'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/customer/site/trunk'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/just'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/just/some'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/just/some/directory'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/branches'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/branches/reinout-rendering'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/tags'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/tags/0.1'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/tags/0.2'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/tags/0.3-bugfix'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/tags/reinout-fixed'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project1/trunk'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/project2'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/sandbox'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/sandbox/reinout'...
Listing './lib/python3.5/site-packages/tha/tagfinder/tests/fixture/sandbox/reinout/reinout_project'...
Listing './lib/python3.5/site-packages/tha/taglist'...
Compiling './lib/python3.5/site-packages/tha/taglist/exporter.py'...
***   File "./lib/python3.5/site-packages/tha/taglist/exporter.py", line 123
    os.chmod(target, 0644)
                        ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/tha/taglist/templates'...
Listing './lib/python3.5/site-packages/tha.tagfinder-1.2.egg-info'...
Listing './lib/python3.5/site-packages/tha.taglist-1.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
